css/site.css
/* https://jgthms.com/web-design-in-4-minutes */
/* @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500'; */
@import 'https://fonts.googleapis.com/css?family=Raleway:400,300,600';
@import'https://fonts.googleapis.com/css?family=Playfair+Display:400,300,600';
@import 'https://fonts.googleapis.com/css?family=Open+Sans:400,300,600';
body {
  margin: auto;
  display: grid;
  grid-template-areas: 
    "header"
    "main"
    "footer";
  grid-gap: 1em;
  align-content: space-evenly;
  line-height: 1.5;
  color: white;
  background-color: #111111;
  border-top: 5px solid #3498db;
  width: 80%;
  font-family: "Open Sans", Impact;
  font-size: large;
  word-wrap: break-word;
}

/*header#preamble, main#content, footer#postamble {
}*/

main#content, footer#postamble {
    padding-left: 1em;
    padding-right: 1em
}

header {
  grid-area: header;
  font-family: "Raleway", Impact, serif;
}

header a {
  font-weight: 600;
}

main {
  grid-area: main;
  border-left: 0px solid #202020;
  /* font: 400 16px/22px "open sans", sans-serif; */
}

footer {
  grid-area: footer;

  font-size: 80%;
  color: #666;
  border-top: 4px solid #333;
  overflow: hidden;
}

@media (min-width: 500px) {
  body {
    grid-template-columns: 1fr 3fr;
    grid-template-areas:
      "header main"
      "header footer";
  }
}

h1, h2, h3, h4, h5, h6 {
  color: #EEE;
  font-family: "Raleway", Impact, sans-serif;
  font-weight: 600;
}

.post-list.outline-2 h2 {
  font-size: 1.0rem;
}

.post-list ul {
  padding-left: 0;
}

h2 {
  margin-top: 1em;
}
h3 {
  font-size: 90%;
}

h1,
h2,
strong {
  color: #EEE;
}

h1.title {
  font-weight: 800;
}

h1 {
  font-size: 32px;
  line-height: 40px;
}

h2 {
    font-size: 24px;
    line-height: 30px;
}

pre {
  padding: 1em;
  border-left: 2px solid #AAA;
}

pre.example, pre.src, code {
  font-family: monospace, monospace;
  border: 0.5px solid #444;
  background-color: #333;
  font-size: 85%;
}

pre.example, pre.src {
  overflow-x: auto;
  width: auto;
  padding: 0 1em;
}

a {
  /* color: #e81c4f; */
  color: #3498db;
}

aside h1, aside h2, aside h3 {
  text-align: center;
}

#preamble img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.avatar {
  -webkit-border-radius: 50%;
}

.timestamp {
  font-family: 'Lucida Console', 'Andale Mono', monospace;
  color: #aaa;
  padding-right: 5px;
  font-size: 14px;
}

section.post-list ul {
  list-style-type: none;
}

section.post-list li .timestamp:after {
  content: " »";
}

#bio {
  border-top: 1px dotted #333;
}

#social {
  font-size: 13px;
  text-align: center;
}

hr {
  margin-top: 1rem;
  margin-bottom: 1.5rem;
  border-width: 0;
  border-top-width: 0px;
  border-top: 1px solid #333;
}

blockquote {
  background: #444;

  border-left: 10px solid #333;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote p {
  display: inline;
}

blockquote::before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

.subtitle, figcaption {
  color: #aaa;
  margin: 0 0 10px 0;
}

figcaption {
  font-size: 0.7em;
}

.figure-number {
  visibility: hidden;
}

main img {
  outline: 0;
  max-width: 100%;
  height: auto;
}

main img {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

#stalker i {
  font-size: 28px;
  margin-right: 5px;
}

/* https://github.com/fniessen/org-html-themes/blob/master/styles/readtheorg/css/htmlize.css */
.org-bold { /* bold */ font-weight: bold; }
.org-bold-italic { /* bold-italic */ font-weight: bold; font-style: italic; }
.org-buffer-menu-buffer { /* buffer-menu-buffer */ font-weight: bold; }
.org-builtin { /* font-lock-builtin-face */ color: #7a378b; }
.org-button { /* button */ text-decoration: underline; }
.org-calendar-today { /* calendar-today */ text-decoration: underline; }
.org-change-log-acknowledgement { /* change-log-acknowledgement */ color: #b22222; }
.org-change-log-conditionals { /* change-log-conditionals */ color: #a0522d; }
.org-change-log-date { /* change-log-date */ color: #8b2252; }
.org-change-log-email { /* change-log-email */ color: #a0522d; }
.org-change-log-file { /* change-log-file */ color: #0000ff; }
.org-change-log-function { /* change-log-function */ color: #a0522d; }
.org-change-log-list { /* change-log-list */ color: #a020f0; }
.org-change-log-name { /* change-log-name */ color: #008b8b; }
.org-comint-highlight-input { /* comint-highlight-input */ font-weight: bold; }
.org-comint-highlight-prompt { /* comint-highlight-prompt */ color: #00008b; }
.org-comment { /* font-lock-comment-face */ color: #999988; font-style: italic; }
.org-comment-delimiter { /* font-lock-comment-delimiter-face */ color: #999988; font-style: italic; }
.org-completions-annotations { /* completions-annotations */ font-style: italic; }
.org-completions-common-part { /* completions-common-part */ color: #000000; background-color: #ffffff; }
.org-completions-first-difference { /* completions-first-difference */ font-weight: bold; }
.org-constant { /* font-lock-constant-face */ color: #008b8b; }
.org-diary { /* diary */ color: #ff0000; }
.org-diff-context { /* diff-context */ color: #7f7f7f; }
.org-diff-file-header { /* diff-file-header */ background-color: #b3b3b3; font-weight: bold; }
.org-diff-function { /* diff-function */ background-color: #cccccc; }
.org-diff-header { /* diff-header */ background-color: #cccccc; }
.org-diff-hunk-header { /* diff-hunk-header */ background-color: #cccccc; }
.org-diff-index { /* diff-index */ background-color: #b3b3b3; font-weight: bold; }
.org-diff-nonexistent { /* diff-nonexistent */ background-color: #b3b3b3; font-weight: bold; }
.org-diff-refine-change { /* diff-refine-change */ background-color: #d9d9d9; }
.org-dired-directory { /* dired-directory */ color: #0000ff; }
.org-dired-flagged { /* dired-flagged */ color: #ff0000; font-weight: bold; }
.org-dired-header { /* dired-header */ color: #228b22; }
/* ... */

